# src/main/kotlin/com/heerkirov/animation/model/result/StatisticsRes.kt
@@ -6,6 +6,8 @@ import com.heerkirov.animation.enums.PublishType
 import com.heerkirov.animation.enums.SexLimitLevel
 import com.heerkirov.animation.enums.ViolenceLimitLevel
 import com.heerkirov.animation.model.data.OverviewModal
+import com.heerkirov.animation.model.data.SeasonModal
+import com.heerkirov.animation.model.data.SeasonOverviewModal
 import com.heerkirov.animation.util.toDateTimeString
 import java.time.LocalDateTime
 
@@ -18,8 +20,54 @@ data class OverviewRes(@JsonProperty("total_animations") val totalAnimations: In
                        @JsonProperty("sex_limit_level_counts") val sexLimitLevelCounts: Map<SexLimitLevel, Int>,
                        @JsonProperty("violence_limit_level_counts") val violenceLimitLevelCounts: Map<ViolenceLimitLevel, Int>,
                        @JsonProperty("tag_counts") val tagCounts: Map<String, Int>,
+                       @JsonProperty("sex_limit_level_avg_scores") val sexLimitLevelAvgScores: Map<SexLimitLevel, Double>,
+                       @JsonProperty("violence_limit_level_avg_scores") val violenceLimitLevelAvgScores: Map<ViolenceLimitLevel, Double>,
+                       @JsonProperty("tag_avg_scores") val tagAvgScores: Map<String, Double>,
                        @JsonProperty("update_time") val updateTime: String)
 
 fun OverviewModal.toResWith(updateTime: LocalDateTime): OverviewRes {
-    return OverviewRes(totalAnimations, totalEpisodes, totalDuration, scoreCounts, originalWorkTypeCounts, publishTypeCounts, sexLimitLevelCounts, violenceLimitLevelCounts, tagCounts, updateTime.toDateTimeString())
+    return OverviewRes(totalAnimations, totalEpisodes, totalDuration,
+            scoreCounts, originalWorkTypeCounts, publishTypeCounts,
+            sexLimitLevelCounts, violenceLimitLevelCounts, tagCounts,
+            sexLimitLevelAvgScores ?: emptyMap(), violenceLimitLevelAvgScores ?: emptyMap(), tagAvgScores ?: emptyMap(),
+            updateTime.toDateTimeString())
+}
+
+data class SeasonOverviewRes(@JsonProperty("begin_year") val beginYear: Int?,
+                             @JsonProperty("begin_season") val beginSeason: Int?,
+                             @JsonProperty("end_year") val endYear: Int?,
+                             @JsonProperty("end_season") val endSeason: Int?,
+                             @JsonProperty("update_time") val updateTime: String?)
+
+fun SeasonOverviewModal.toResWith(updateTime: LocalDateTime): SeasonOverviewRes {
+    return SeasonOverviewRes(beginYear, beginSeason, endYear, endSeason, updateTime.toDateTimeString())
+
+}
+
+data class SeasonRes(@JsonProperty("total_animations") val totalAnimations: Int,
+                     @JsonProperty("max_score") val maxScore: Int?,
+                     @JsonProperty("min_score") val minScore: Int?,
+                     @JsonProperty("avg_score") val avgScore: Double?,
+                     @JsonProperty("avg_positivity") val avgPositivity: Double?,
+                     @JsonProperty("sex_limit_level_counts") val sexLimitLevelCounts: Map<SexLimitLevel, Int>,
+                     @JsonProperty("violence_limit_level_counts") val violenceLimitLevelCounts: Map<ViolenceLimitLevel, Int>,
+                     @JsonProperty("tag_counts") val tagCounts: Map<String, Int>,
+                     @JsonProperty("animations") val animations: List<Animation>,
+                     @JsonProperty("update_time") val updateTime: String) {
+    data class Animation(@JsonProperty("id") val id: Int,
+                         @JsonProperty("title") val title: String,
+                         @JsonProperty("cover") val cover: String?,
+                         @JsonProperty("sex_limit_level") val sexLimitLevel: SexLimitLevel?,
+                         @JsonProperty("violence_limit_level") val violenceLimitLevel: ViolenceLimitLevel?,
+                         @JsonProperty("subscription_time") val subscriptionTime: String,
+                         @JsonProperty("finish_time") val finishTime: String?,
+                         @JsonProperty("score") val score: Int?,
+                         @JsonProperty("positivity") val positivity: Double?)
+}
+
+fun SeasonModal.toResWith(updateTime: LocalDateTime): SeasonRes {
+    return SeasonRes(totalAnimations, maxScore, minScore, avgScore, avgPositivity, sexLimitLevelCounts, violenceLimitLevelCounts, tagCounts,
+            animations.map { SeasonRes.Animation(it.id, it.title, it.cover, it.sexLimitLevel, it.violenceLimitLevel,
+                    it.subscriptionTime, it.finishTime, it.score, it.positivity) },
+            updateTime.toDateTimeString())
 }
